# ClientServerMssgnr

./: CMakeLists.txt  README.md
client/: app.cpp  client.hpp
server/: app.cpp  server.hpp
shared/: protocol.hpp
