cmake_minimum_required(VERSION 3.1)

project("1C Project") # TODO rename

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++20" CACHE STRING "Comment" FORCE)
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS} -D NDEBUG" CACHE STRING "Comment" FORCE)
set(CMAKE_CXX_FLAGS_SANITIZER "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wformat=2 -fsanitize=address,undefined -g" CACHE STRING "Comment" FORCE)

# Enable debug symbols by default
# must be done before project() statement
if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Debug CACHE STRING "Choose the type of build (Debug or Release)" FORCE)
endif()
# (you can also set it on the command line: -D CMAKE_BUILD_TYPE=Release)

include(FetchContent)

FetchContent_Declare(
  async_sockets
  GIT_REPOSITORY https://github.com/eminfedar/async-sockets-cpp.git
  GIT_TAG        v0.3.1
)

FetchContent_GetProperties(async_sockets)
if(NOT async_sockets_POPULATED)
  FetchContent_Populate(async_sockets)
  include_directories(${async_sockets_SOURCE_DIR}/async-sockets/include/)
endif()

FetchContent_Declare(
  googletest
  GIT_REPOSITORY https://github.com/google/googletest.git
  GIT_TAG        release-1.8.0
)

FetchContent_GetProperties(googletest)
if(NOT googletest_POPULATED)
  FetchContent_Populate(googletest)
  add_subdirectory(${googletest_SOURCE_DIR} ${googletest_BINARY_DIR})
endif()

add_executable(example_server ./server/app.cpp)
add_executable(example_client ./client/app.cpp)

# target_link_libraries()

message("                                                                                                                                                                 ")
message("                                                                                                                                                                 ")
message("                                                                                                  ------                                                         ")
message("                                                                                              -========@-                                                        ")
message("                                                                                      ---  --=@@@@@@@@@@@=                                                       ")
message("                                                                 ---------------------=-=--================                                                      ")
message("                                                ----------=--------===-----------------------=--=-==========--                                                   ")
message("                                            -----==----------------------------------------------======@@@@@=-=-                                                 ")
message("                                          ----------------------------------------------------=======-=====@@=-==--                                              ")
message("                                     ----------------------------------------------------------==@@@=======@@@======-                                            ")
message("                              -----=-------------------------=----===---------------------------=@@=========@@@@======-                                          ")
message("                        ------------------------------===========-========-----------------------=@@@@=@=====@@@=-======-                                        ")
message("                    ---==----------------------------=======----------======---------------------=@@@=@@-====@@@===--=====-                                      ")
message("                -----------------------------------========-=-----------=====--------------------=@@@@=============-=--====-                                     ")
message("             --===--------------------------------======@@@@@@@@@==@====-===---------------------==@@@=@@@@@==========---===-                                    ")
message("          --====-----------------------------------=====@@@@@@@@@@@@==-=====----------------------====@@@@@=@================-                                   ")
message("       -========-----------------------------------=================-=====------------------------=-========================-=-                                  ")
message("     -=========----------------=---------------------===-------=-========---------------------------------===================-==-                                ")
message("    =============----------------------------------------=========----------------------------------------=========--====--=====--                               ")
message("   ======@=@=====--------------------------------------------------------------------------------------------===---==-=====--====--                              ")
message("  -===============--=------------------------===----------------------------------------------------------------------======--==-==-                             ")
message("  -====@=========-====---------------------------===----------------------------------------------------------------=----=====--====-                            ")
message("  -===-==-=======---=------------------------------------------------------------------------------------------------------------====-                           ")
message("  =@@==@@=========--=----====-====--===---------------------------------------------------=-------------------------------=------=====-                          ")
message("  -=@@@@@@=====-==--==-====================================-----====---------------------------------------------------=---==-==-===@==-                         ")
message("   ==@@@@@=====-=======-==========================================-===---------------------------------------------------==--=====@@@@=-                         ")
message("    =@@@@=====================================================================--------=-----------------------------------=======@@@=--@@                        ")
message("    -=@@@========================================================================------===------------------------=----======@@@@@=- =@@@@-                      ")
message("    -==@@====================================--=====-=============================-------=----=----------------======-=====@@@@@=- -@@@@@@@-                     ")
message("      =@@====================-=========-=======---==----===========================--=-=-----------==----==-=--===-====@@@@@@==- -=@@@@@@@@@-                    ")
message("      -=@@===============----=--======-----=====================--============--==------------------===---====--=@==@@@@@@@=-  -=@@@@@@@@@@@@-                   ")
message("       -=======================================================================------------=====--===-===========@@@@@@@==-  -=@@@@@@@@@@@@@@@-                  ")
message("        --======================================================================-=----=============-===-======@@@@@@@===-  -@@@@@@@@@@@@@@@@@@@=-                ")
message("           --=============================================================================================@=@@@@@@===-- -=@@@@@@@@@@@@@@@@@@@@@@@=               ")
message("                --=============@@@@=@@@@@@@@=@@@@@@=======================================================@@@@@@===-  -=@@@@@@@@@@@@@@@@@@@@@@@@@@@-             ")
message("                   -========@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@=@@@@=================================-=====@@@@@@===-  -=@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@=            ")
message("                      ---------------=====@@@@@@@@@@@@@@@@@@@@@@@@@@@@===============================@@@@@@===--  -=@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@-          ")
message("                                                 -=--======@@@@@@@@@@@@@=@@=======================@@@@@@====-  -=@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@-        ")
message("                                                            --=@@@@@@@@@@@@@===================@@@@@@@@==--  -=@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@-      ")
message("                                                               =@@@@@@@@@@@@@===============@@@@@@@@===-   -=@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@-    ")
message("                                                               -=@@@@@@@@@@@@@============@@@@@@@@==--   =@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@=-  ")
message("                                                                -@@@@@@@@@@@@@===========@@@@@===--   -=@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@- ")
message("                                                              ---@@@@@@@@@@@@@@=======@@@@@@==--    -=@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@= ")
message("                                                            -========@@@@@@@==@@@@@@@@@@====-    -=@@@@@@@@@@=@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@= ")
message("                                                         -=====--==========@@@@@@@@@@===--     -=@@@@@@@@@@@@=@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@= ")
message("                                                     -==@======-=========@@@@@@@====---     -=@@@@@@@@@@@@@@=@=@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@- ")
message("                                                 -==@@@================@@@@@@==----       -=@@@@@@@@@@@@@@@@@@=@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@  ")
message("                                               -=@@@=-===============@@@@@@=----        -=@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@=  ")
message("                                             =@@@@=  -@====-========@@@@@---         -=@@@@@@@@@@@@@@@@@@@@@@=@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@-  ")
message("                                            =@@@-   -@====-========@@@@@-          -=@@@@@@@@@@@@@@@@@@@@@@@@=@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@   ")
message("                                           -@@=     =@===-========@@@@=          -=@@@@@@@@@@@@@@@@@@@@@@@@@@=@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@-   ")
message("                                          -@@=     -===---=======@@=-          -=@@@@@@@@@@@@@@@@@@@@@@@@@@@@=@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@=    ")
message("                                         =@@-  -=- ====-========@=           -=@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@=-      ")
message("                                       -@@=  ---===@========@@@@@ ---      -=@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@=-         ")
message("                                      -@@-  ---==@@==========@@@=------  -=@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@=@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@=-            ")
message("                                     -@@-   --===============@@@-     -==@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@=-             ")
message("                                    =@@-   -================@@=      -=@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@=-               ")
message("                                   =@@-  -================@@@@    -=@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@=-                  ")
message("                                   @@@- -================@@@@-  -=@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@=-                     ")
message("                                  -@@@ -===============@@@@@= -=@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@=-                        ")
message("                                  -@@@ -==============@@@@@@==@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@=-                           ")
message("                                  -@@@ -=============@=@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@==-                              ")
message("                                  -@@@  ==============@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@==--                                 ")
message("                                   @@@- ==============@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@=@@@@@@@@@@@@@@@@@@@@@@@@@===--                                     ")
message("                                   =@@= -============@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@=================@@@@@@@@@@@@@@=--                                           ")
message("                                   -@@= ============@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@=================@=@@@@@@@@@@=-                                               ")
message("                                    @@=-@=========@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@========@@======@@@@@@@@@@==-                                                  ")
message("                                    -@@@=========@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@=@@@@=--                                                     ")
message("                                     =@@=======@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@==-                                                         ")
message("                                      -@@====@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@==-                                                             ")
message("                                        @===@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@======--                                                                 ")
message("                                         =@@=@@@@@@@@@@@@@@@@@@@@@@@@@==@@@@@@@===---                                                                            ")
message("                                          ===@@@==================---   -----                                                                                    ")
message("                                                                                                                                                                 ")
message("                                                                                                                                                                   ")
message("\t\t\t\t\t\t\t  ----------------------------------")
message("\t\t\t\t\t\t\t  |  Thx for checking out my code! |")
message("\t\t\t\t\t\t\t  ----------------------------------")
